[gd_scene load_steps=19 format=2]

[ext_resource path="res://debris/smallDebris.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/debris/debris_small_spritesheet.png" type="Texture" id=2]
[ext_resource path="res://debris/debrisPhysicsMaterial.tres" type="PhysicsMaterial" id=3]
[ext_resource path="res://assets/sounds/explosion_sound.wav" type="AudioStream" id=4]
[ext_resource path="res://debris/DebrisExplosion.tscn" type="PackedScene" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 39, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 39, 0, 39, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 78, 0, 39, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 0, 32, 39, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 39, 32, 39, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 78, 32, 39, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 0, 64, 39, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 39, 64, 39, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 78, 64, 39, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 0, 96, 39, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 39, 96, 39, 32 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 11.0
} ]

[sub_resource type="RectangleShape2D" id=13]
resource_local_to_scene = true
extents = Vector2( 8.31946, 7.12343 )

[node name="smallDebris" type="RigidBody2D"]
collision_layer = 7
collision_mask = 7
physics_material_override = ExtResource( 3 )
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 13 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 1.72385, 1.32295 )

[node name="DebrisExplosion" parent="." instance=ExtResource( 5 )]
script = null

[node name="DestroySound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -6.0
bus = "Sounds"

[connection signal="body_entered" from="." to="." method="_on_debris_body_entered"]
[connection signal="hit_by_projectile" from="." to="." method="_on_debris_hit_by_projectile"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="finished" from="DestroySound" to="." method="_on_DestroySound_finished"]
